--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -102,16 +102,13 @@ html, body {
         @media (min-width: $tablet) {
             position: relative;
             top: 0;
+            right: 0;
             width: 100%;
         }
 
         ul {
             padding: 0;
             margin: 0;
-
-            @media (min-width: $tablet){
-                
-            }
 
             li {
                 display: block;
@@ -127,8 +124,7 @@ html, body {
                 }
 
                 &:hover {
-                    background-color: #FB8;
-                    color: #000;
+                    color: #FB8;
                 }
 
                 a {
@@ -152,24 +148,22 @@ html, body {
     align-items: center;
     width: 100%;
     height: 100vh;
-    background-image: url('/images/mars_bg.png');
-    background-position: center;
-    background-size: cover;
     position: relative;
 
     .hello__title {
-        font-size: 2.3rem;
-        color: #FFF;
-        font-family: 'Play', sans-serif;
-        top: 300px;
+        font-size: 3rem;
+        color: #FFFFFF;
         margin: 0;
+        text-align: center;
+        border-bottom: 2px solid white;
+        text-transform: uppercase;
 
         @media (min-width: $tablet){
-            font-size: 3rem;
+            font-size: 3.5rem;
         }
 
         @media (min-width: $desktop){
-            font-size: 4rem;
+            font-size: 4.5rem;
         }
     }
 
@@ -255,11 +249,37 @@ html, body {
 
         .image {
             display: inline-block;
-            width: 150px;
-            height: 100px;
-            margin-bottom: 10px;
+            width: 220px;
+            margin-bottom: 10px; 
+            background-color: #FFFFFF;
+            color: #000000;
+            padding: 5px;
+
+            figure {
+                padding: 0;
+                margin: 0;
+                img {
+                    width: 100%;
+                }
+            }
         }
-    }   
+    } 
+    
+    .load__more {
+        position: relative;
+        left: 43.5%;
+        background-color: #D60202;
+        color: #FFF;
+        text-transform: uppercase;
+        padding: 15px 25px;
+        border-radius: 3px;
+        border: 0;
+        margin-top: 30px;
+
+        &:hover {
+            background-color: #920000;
+        }
+    }
 }
 
 //----------- lightbox -------------
