--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,6 +15,7 @@ html, body {
     width: 100%;
     font-size: 16px;
     font-family: 'Titillium Web', sans-serif;
+    color: #272727;
 
     @media (min-width: $tablet){
         font-size: 18px;
@@ -230,14 +231,15 @@ html, body {
     }
 
     .images__container {
-        width: 100%;
+        width: 60%;
+        margin: 0 auto;
         height: 100%;
         display: flex;
         justify-content: space-around;
         flex-wrap: wrap;  
 
         @media (min-width: $tablet) {
-            width: 90%;
+            width: 70%;
             margin: 0 auto;
             justify-content: space-between;
         }
